# Dagger

./: framework.py  log.txt
hw/b/: ase_sources.mk  vlog_files.list  vsim_run.tcl
hw/b/rtl/: afu_json_info.vh  ase_platform_config.mk  platform_afu_top_config.vh  platform_if_addenda.txt  platform_if_includes.txt
hw/b/work/: .ase_ipc_local  ase_libs.nm  ccip_transactions.tsv  log_ofs_plat_host_chan.tsv  modelsim.ini  quartus_msim_verilog.do  quartus_msim_verilog_libs  transcript  vsim.wlf
hw/rtl/: ccip_mmio.sv  ccip_queue_polling.sv  ccip_std_afu.sv  connection_manager.sv  cpu_if_defs.vh  nic.sv  nic_defs.vh  rpc.sv  rpc_defs.vh  top_level_loopback_fanin.sv  top_level_network_3.sv  udp_ip.sv
sw/: CMakeLists.txt  CMakeLists.txt.save  CMakeLists.txt.sim
sw/ase_samples/: CMakeLists.txt  client.cc  loopback.cc  server.cc
sw/build_loopback_rx9_tx9/: err.txt
sw/build_loopback_upi_pac_a10_200/: client_out.txt  server_out.txt
sw/build_loopback_upi_pac_a10_sim/: afu_json_info.h  err.txt
sw/build_new/: afu_json_info.h  errors.txt  server_stdout.txt
sw/build_sim/: errors.txt
sw/build_sim_loopback/: err.txt
sw/codegen/: dagger_test.idl  rpc_client.h  rpc_server_callback.h  rpc_types.h
sw/microbenchmarks/framework/: CMakeLists.txt  client.cc  loopback.cc  rdma_qp.h  server.cc  simple_client.cc
sw/src/: connection_manager.cc  connection_manager.h  nic.h  queuepair.cc  queuepair.h  queuepair_v2.cc  queuepair_v2.h  rdma.cc  rdma.h  rdma.txt  rdma_qp.cc  rdma_qp.h  rdma_v2.cc  rdma_v2.h  rpc_header.h  rx_queue.h  time_calculator.py  tx_queue.h
(+121 files in other folders)
